# sphinx-api-relink

./: .cspell.json  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml
docs/: conf.py  index.md
src/sphinx_api_relink/: __init__.py  helpers.py  linkcode.py
