[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]

[project]
authors = [{name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "colorama",
    "docutils",
    "sphinx",
]
description = "Relink type hints in your Sphinx API"
dynamic = ["version"]
keywords = [
    "autodoc",
    "reference",
    "relink",
    "sphinx",
]
license = {text = "BSD 3-Clause License"}
maintainers = [{email = "compwa-admin@ep1.rub.de"}]
name = "sphinx-api-relink"
requires-python = ">=3.10"

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
Changelog = "https://github.com/ComPWA/sphinx-api-relink/releases"
Documentation = "https://github.com/ComPWA/sphinx-api-relink/blob/main/README.md"
Source = "https://github.com/ComPWA/sphinx-api-relink"
Tracker = "https://github.com/ComPWA/sphinx-api-relink/issues"

[dependency-groups]
dev = [
    "poethepoet",
    "ruff",
    {include-group = "doc"},
    {include-group = "style"},
]
doc = [
    "myst-parser",
    "sphinx-book-theme",
    "sphinx-codeautolink",
    "sphinx-copybutton",
]
style = [
    "mypy",
    "types-colorama",
    "types-docutils",
    "types-requests",
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = [
    "py.typed",
    "templates/*.rst.jinja",
]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools_scm]
write_to = "src/version.py"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
files = [
    "**/*.py",
    "**/*.pyi",
]
show_error_codes = true
warn_unused_configs = true

[tool.poe.executor]
isolated = true
no-group = "dev"
type = "uv"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = [
    "doc",
    "linkcheck",
    "style",
]

[tool.poe.tasks.doc]
cmd = """
    sphinx-build \
        --builder=html \
        --fail-on-warning \
        --keep-going \
        --show-traceback \
        docs/ \
        docs/_build/html/
"""
executor = {group = "doc"}
help = "Build documentation and API"

[tool.poe.tasks.doclive]
cmd = """
sphinx-autobuild \
    --builder=html \
    --open-browser \
    --port=0 \
    --re-ignore=/__pycache__(/.*)?$ \
    --re-ignore=/_build(/.*)?$ \
    --re-ignore=/\\.cache(/.*)?$ \
    --re-ignore=/\\.egg-info(/.*)?$ \
    --re-ignore=/\\.ipynb_checkpoints(/.*)?$ \
    --re-ignore=/\\.virtual_documents(/.*)?$ \
    --re-ignore=/api(/.*)?$ \
    --re-ignore=/docs$ \
    --re-ignore=/version\\.py$ \
    --re-ignore=\\.egg-info(/.*)?$ \
    --watch=src \
    docs/ \
    docs/_build/html/
"""
executor = {group = "doc", with = "sphinx-autobuild"}
help = "Set up a server to directly preview changes to the HTML pages"

[tool.poe.tasks.linkcheck]
cmd = """
sphinx-build \
    --builder=linkcheck \
    --show-traceback \
    docs/ \
    docs/_build/linkcheck/
"""
executor = {group = "doc"}
help = "Check external links in the documentation (requires internet connection)"

[tool.poe.tasks.style]
cmd = "pre-commit run --all-files"
executor = {group = "style"}
help = "Perform all linting, formatting, and spelling checks"

[tool.pyright]
reportGeneralTypeIssues = false
reportMissingImports = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportUnboundVariable = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = false
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedImport = true
reportUnusedVariable = true
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."

[tool.ruff]
preview = true
show-fixes = true
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FBT",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLW1514",
    "PLW2901",
    "PT001",
    "PTH",
    "RUF067",
    "S404",
    "SIM108",
    "UP036",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"docs/*" = [
    "INP001",
    "S101",
    "S113",
]
"docs/conf.py" = ["D100"]
"setup.py" = ["D100"]
"tests/*" = [
    "D",
    "INP001",
    "PGH001",
    "PLR0913",
    "PLR2004",
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = [
    "build-system",
    "project",
    "tool.setuptools",
    "tool.setuptools_scm",
]
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
