[project]
name = "sphinx-api-relink"
description = "Relink type hints in your Sphinx API"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de" }]
maintainers = [{ email = "compwa-admin@ep1.rub.de" }]
keywords = [
    "autodoc",
    "reference",
    "relink",
    "sphinx",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "colorama",
    "docutils",
    "sphinx",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Changelog = "https://github.com/ComPWA/sphinx-api-relink/releases"
Documentation = "https://compwa.github.io/sphinx-api-relink"
Issues = "https://github.com/ComPWA/sphinx-api-relink/issues"
Source = "https://github.com/ComPWA/sphinx-api-relink"

[dependency-groups]
dev = [
    "ruff",
    { include-group = "doc" },
    { include-group = "style" },
]
doc = [
    "myst-parser",
    "sphinx-book-theme",
    "sphinx-codeautolink",
    "sphinx-copybutton",
]
style = [
    "ty",
    "types-colorama",
    "types-docutils",
    "types-requests",
]

[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[tool.compwa.policy]
repo-name = "sphinx-api-relink"
repo-title = "sphinx-api-relink"

[tool.compwa.policy.python]
type-checker = ["ty"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.poe.executor]
isolated = true
no-group = "dev"
type = "uv"

[tool.poe.groups.doc]
heading = "Documentation"

[tool.poe.groups.doc.tasks.doc]
cmd = """
    sphinx-build \
        --builder=html \
        --fail-on-warning \
        --keep-going \
        --show-traceback \
        docs/ \
        docs/_build/html/
"""
executor = { group = "doc" }
help = "Build documentation and API"

[tool.poe.groups.doc.tasks.doclive]
cmd = """
sphinx-autobuild \
    --builder=html \
    --open-browser \
    --port=0 \
    --re-ignore=/_build(/.*)?$ \
    --re-ignore=/\\.egg-info(/.*)?$ \
    --re-ignore=/api(/.*)?$ \
    --re-ignore=/docs$ \
    --re-ignore=/version\\.py$ \
    --re-ignore=\\.egg-info(/.*)?$ \
    --watch=src \
    docs/ \
    docs/_build/html/
"""
executor = { group = "doc", with = "sphinx-autobuild" }
help = "Set up a server to directly preview changes to the HTML pages"

[tool.poe.groups.doc.tasks.linkcheck]
cmd = """
sphinx-build \
    --builder=linkcheck \
    --show-traceback \
    docs/ \
    docs/_build/linkcheck/
"""
executor = { group = "doc" }
help = "Check external links in the documentation (requires internet connection)"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = ["style", "doc", "linkcheck"]

[tool.poe.tasks.style]
cmd = "pre-commit run --all-files"
executor = { isolated = false, no-group = "" }
help = "Perform all linting, formatting, and spelling checks"

[tool.poe.tasks.upgrade]
executor = { type = "simple" }
help = "Upgrade lock files"
parallel = ["_upgrade-precommit", "_upgrade-uv"]

[tool.poe.tasks._upgrade-precommit]
cmd = "pre-commit autoupdate -j8"
executor = { type = "simple" }

[tool.poe.tasks._upgrade-uv]
cmd = "uv lock --upgrade"
executor = { type = "simple" }

[tool.ruff]
preview = true
show-fixes = true
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FBT",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLW1514",
    "PLW2901",
    "PT001",
    "PTH",
    "RUF067",
    "S404",
    "SIM108",
    "UP036",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["INP001", "S101", "S113"]
"docs/conf.py" = ["D100"]
"setup.py" = ["D100"]
"tests/*" = ["D", "INP001", "PLR0913", "PLR2004", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = [
    "py.typed",
    "templates/*.rst.jinja",
]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools_scm]
version_file = "src/version.py"

[tool.tombi.format.rules]
indent-width = 4
line-width = 88

[tool.tombi.lint.rules]
key-empty = "off"

[[tool.tombi.schemas]]
root = "tool.compwa.policy"
path = "https://raw.githubusercontent.com/ComPWA/policy/b1a4216872b0e6539e0b70a051a6d3aaed874356/compwa-policy.schema.json"
include = ["pyproject.toml"]

[tool.ty.rules]
division-by-zero = "warn"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"

[tool.ty.terminal]
error-on-warning = true
